<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="activityb">ABOUT ALC</string>
    <string name="activityC">MY PROFILE</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="url">https//andela.com/alc</string>
    <string name="title_activity_about_alc">AboutAlc</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="myName">Olusola Fadahunsi</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Nigeria</string>
    <string name="email">Email: o.o.fadahunsi@gmail.com</string>
    <string name="Phonenumber">Phone number: 08052269972</string>
    <string name="slack">Slack Username: Sola Fadahunsi</string>

</resources>
